--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -6,24 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+    <!-- etiquetas SEO -->
     <title>Maharani Indumentaria</title>
     <meta name="description" content="Presupuesto Indumentaria Deportiva Personalizada">
     <meta name="keywords" content="presupuesto, costo, precio, camiseta, sublimada, personlizada">
     <meta name="google-site-verification" content="j_K_alRuwYCx3pJ8AFa5ylEMd3STr9PaL3rfYu2akbM" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
+    <!-- animaciones AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- integración de  Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- mi hoja de estilos -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+        <!-- barra de navegación BS -->
+
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a data-aos="zoom-in" class="navbar-brand logo" href="#"><img src="../img/logo.png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,8 +40,11 @@
                             <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./quienes.html">¿QUIENES SOMOS?</a>
+                            <a class="nav-link" href="./quienes.html">¿QUIÉNES SOMOS?</a>
                         </li>
+
+                        <!-- menú desplegable "galerias" -->
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">GALERÍA</a>
@@ -54,6 +60,7 @@
                                 <li><a class="dropdown-item" href="./tabla-talles.html">Tabla de Talles</a></li>
                             </ul>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="./presupuesto.html">PRESUPUESTO</a>
                         </li>
@@ -67,70 +74,69 @@
     </header>
 
     <main>
+        <!-- grid system de BS -->
+
         <div class="container">
             <div class="row">
                 <section class="titulo" data-aos="fade-down">
                     <h1>SOLICITUD DE PRESUPUESTO</h1>
                 </section>
                 <section class="presupuesto col-sm-3">
-                    <h3>Por favor completa todos los datos:</h3>
-                    <label for="nombres">Nombres</label>
-                    <input type="text" id="nombres" placeholder="Ingrese su/s Nombre/s" required>
-                    <label for="apellido">Apellido</label>
-                    <input type="text" id="apellido" placeholder="Ingrese su Apellido" required>
-                    <div>
-                        <br>
-                    </div>
-                    <label for="correo">Correo Electrónico</label>
-                    <input type="text" id="correo" placeholder="Ingrese su E-Mail" required>
-                    <div>
-                        <br>
-                    </div>
-                    <div class="club">
-                        <p>¿Representas a un Club o sos Particular?</p>
-                        <input type="radio" name="deporte" id="club" value="1">
-                        <label for="club">Club</label>
-                        <input type="radio" name="deporte" id="part" value="2">
-                        <label for="part">Particular</label>
-                    </div>
-                    <div>
-                        <br>
-                    </div>
-                    <div>
-                        ¿Para qué deporte quiere la indumentaria?
-                        <select name="deporte" id="deporte" required>
-                            <option label="Selec. Disciplina" disabled></option>
-                            <option value="1">Futbol</option>
-                            <option value="2">Hockey</option>
-                            <option value="3">Polo</option>
-                            <option value="4">Otras disciplinas</option>
-                        </select>
-                        <label for="otras">Otras disciplinas</label>
-                        <input type="text" id="otras" placeholder="Disciplina...">
-                    </div>
-                    <div>
-                        <br>
-                    </div>
-                    <div>
-                        <label for="cantidad">Cantidad</label>
-                        <input type="number" id="cantidad" placeholder="Cantidad" min="1" max="100" required>
-                    </div>
-                    <p>Adjuntá escudo y publicidades</p>
-                    <button type="button" class="btn_attach">Adjuntar Archivos...</button>
-                    <div>
-                        <br>
-                    </div>
-                    <p>Revisa que todos los datos sean correctos antes de enviar!</p>
-                    <button type="submit" class="btn_send">Enviar</button>
-                    <button type="reset" class="btn_del">Borrar todo</button>
+                    <form name='presupuesto' class="contact_form" id='formulario' method='post'
+                        action='../assets/enviar_email.php' enctype="multipart/form-data">
+                        <h3>Por favor completa todos los datos:</h3>
+                        <label for="nombres">Nombres</label>
+                        <input type="text" id="nombres" placeholder="Ingrese su/s Nombre/s" required>
+                        <label for="apellido">Apellido</label>
+                        <input type="text" id="apellido" placeholder="Ingrese su Apellido" required>
+                        <label for="correo">Correo Electrónico</label>
+                        <input type="text" id="correo" placeholder="Ingrese su E-Mail" required>
+                        <div class="club">
+                            <p>¿Representas a un Club o sos Particular?</p>
+                            <input type="radio" name="deporte" id="club" value="1">
+                            <label for="club">Club</label>
+                            <input type="radio" name="deporte" id="part" value="2">
+                            <label for="part">Particular</label>
+                            <br>
+                        </div>
+                        <div>
+                            <p>¿Para qué deporte quiere la indumentaria?</p>
+                            <select name="deporte" id="deporte" required>
+                                <option label="Selec. Disciplina"></option>
+                                <option value="1">Futbol</option>
+                                <option value="2">Hockey</option>
+                                <option value="3">Polo</option>
+                                <option value="4">Otras disciplinas</option>
+                            </select>
+                            <label for="otras">Otras disciplinas:</label>
+                            <input type="text" id="otras" placeholder="Disciplina...">
+                        </div>
+                        <div>
+                            <label for="cantidad">Cantidad</label>
+                            <input type="number" id="cantidad" placeholder="Cantidad" min="1" max="100" required>
+                        </div>
+                        <p>Adjuntá escudo y publicidades</p>
+                        <div class="btn_attach">
+                            <input type="file" name="adjuntar archivos" id="archivo_1">
+                            <span>Adjuntar Archivos...</span>
+                        </div>
+                        <p>Revisa que todos los datos sean correctos antes de enviar!</p>
+                        <button type="submit" class="btn_send">Enviar</button>
+                        <button type="reset" class="btn_del">Borrar todo</button>
+                    </form>
                 </section>
 
             </div>
         </div>
+
+        <!-- botón volver arriba -->
+
         <button type="button" class="btn btn-floating btn-sm" id="btn-back-to-top">
             <i class="bi bi-arrow-up"></i>
         </button>
     </main>
+
+    <!-- pie de página -->
 
     <footer>
         <div class="container">
@@ -172,16 +178,21 @@
         </div>
     </footer>
 
+    <!-- scripts -->
+
+    <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <!-- BS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    <!-- botón volver arriba -->
     <script src="../js/back_to_top.js"></script>
 </body>
 
