--- a/pages/tabla-talles.html
+++ b/pages/tabla-talles.html
@@ -6,24 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+    <!-- etiquetas SEO -->
     <title>Maharani Indumentaria</title>
     <meta name="description" content="Tabla de Talles Induementaria">
     <meta name="keywords" content="talles, camiseta, personalizada, dama, caballero, size">
     <meta name="google-site-verification" content="j_K_alRuwYCx3pJ8AFa5ylEMd3STr9PaL3rfYu2akbM" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
+    <!-- animaciones AOS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- integracion de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- mi hoja de estilos -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
 
     <header>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+        <!-- barra de navegación BS -->
+
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a data-aos="zoom-in" class="navbar-brand logo" href="#"><img src="../img/logo.png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -37,8 +40,11 @@
                             <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./quienes.html">¿QUIENES SOMOS?</a>
+                            <a class="nav-link" href="./quienes.html">¿QUIÉNES SOMOS?</a>
                         </li>
+
+                        <!-- menú desplegable "galerias" -->
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">GALERÍA</a>
@@ -54,6 +60,7 @@
                                 <li><a class="dropdown-item" href="./tabla-talles.html">Tabla de Talles</a></li>
                             </ul>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="./presupuesto.html">PRESUPUESTO</a>
                         </li>
@@ -153,10 +160,15 @@
                 </tr>
             </table>
         </div>
+
+        <!-- botón volver arriba -->
+
         <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
             <i class="bi bi-arrow-up"></i>
         </button>
     </main>
+
+    <!-- pie de página -->
 
     <footer>
         <div class="container">
@@ -198,16 +210,21 @@
         </div>
     </footer>
 
+    <!-- scripts -->
+
+    <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
+    <!-- BS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
+    <!-- botón volver arriba -->
     <script src="../js/back_to_top.js"></script>
 </body>
 
